force-app/main/default/objects/Review_Rating__c/Review_Rating__c.object-meta.xml
<CustomObject>
    <label>Review Rating</label>
    <nameField>
        <label>Review Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>