force-app/main/default/objects/Review_Rating__c/fields/Agreed__c.field-meta.xml
<CustomField>
    <fullName>Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed</label>
    <type>Checkbox</type>
</CustomField>