force-app/main/default/objects/Review_Rating__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Review Ratings</relationshipLabel>
    <relationshipName>Review_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>