force-app/main/default/objects/Review_Rating__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Review Ratings</relationshipLabel>
    <relationshipName>Review_Ratings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>